styles/pdsls/catppuccin.user.less
/* ==UserStyle==
@name PDSls Catppuccin
@namespace github.com/catppuccin/userstyles/styles/pdsls
@homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/pdsls
@version 2000.01.01
@updateURL https://github.com/catppuccin/userstyles/raw/main/styles/pdsls/catppuccin.user.less
@supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Apdsls
@description Soothing pastel theme for PDSls
@author Catppuccin
@license MIT

@preprocessor less
@var select lightFlavor "Light Flavor" ["latte:Latte*", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha"]
@var select darkFlavor "Dark Flavor" ["latte:Latte", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha*"]
@var select accentColor "Accent" ["rosewater:Rosewater", "flamingo:Flamingo", "pink:Pink", "mauve:Mauve*", "red:Red", "maroon:Maroon", "peach:Peach", "yellow:Yellow", "green:Green", "teal:Teal", "blue:Blue", "sapphire:Sapphire", "sky:Sky", "lavender:Lavender", "subtext0:Gray"]
==/UserStyle== */

@import "https://userstyles.catppuccin.com/lib/lib.less";

@-moz-document domain("pdsls.dev"), domain("pds.ls") {
  html.dark {
    #catppuccin(@darkFlavor);
  }

  html:not(.dark) {
    #catppuccin(@lightFlavor);
  }

  #catppuccin(@flavor) {
    #lib.palette();
    #lib.defaults();

    --color-red-300: @red;
    --color-red-400: @red;
    --color-green-300: @green;
    --color-green-400: @green;
    --color-emerald-400: @green;
    --color-blue-400: @accent;
    --color-blue-500: @accent;
    --color-indigo-400: @accent;
    --color-indigo-300: fade(@accent, 85%);

    --color-white: @text;

    --color-dark-100: @surface0;
    --color-dark-200: @surface0;
    --color-dark-300: @surface0;
    --color-dark-500: @base;
    --color-dark-800: @mantle;

    & when not(@flavor =latte) {
      --color-neutral-100: @subtext1;
      --color-neutral-200: @text;
      --color-neutral-300: @subtext1;
      --color-neutral-600: @surface1;
      --color-neutral-700: @surface1;
      --color-neutral-900: @base;
    }

    & when (@flavor =latte) {
      --color-neutral-100: @base;
      --color-neutral-200: @surface0;
      --color-neutral-300: @surface2;
      --color-neutral-600: @subtext1;
      --color-neutral-700: @text;
      --color-neutral-900: @text;
    }

    --color-neutral-50: @base;
    --color-neutral-400: @subtext0;
    --color-neutral-500: @subtext0;
    --color-neutral-800: mix(@surface0, @base, 30%);

    background-color: @base;

    header {
      --header-bg: @base;
    }

    // pdsls logo
    .tabler--binary-tree-filled {
      color: @accent;
    }
  }
}

